# mlx-c

./: .gitignore  .pre-commit-config.yaml  ACKNOWLEDGMENTS.md  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  README.md  build.sh  mlx-c.pc.in
.github/workflows/: build.yml  release.yml
docs/: Doxyfile  README.md  index.html
docs/src/: array.rst  compile.rst  conf.py  device.rst  distributed_group.rst  einsum.rst  export.rst  fft.rst  future.rst  index.rst  install.rst  linalg.rst  map.rst  metal.rst  object.rst  ops.rst  optional.rst  overview.rst  random.rst  stream.rst  string.rst  tuple.rst  variant.rst  vecarray.rst  vector.rst
examples/: CMakeLists.txt  arrays.safetensors  example-closure.c  example-export.c  example-float64.c  example-gguf.c  example-grad.c  example-graph.c  example-jvp.c  example-metal-kernel.c  example-safe-tensors.c  example-try.c  example.c
mlx/c/: array.cpp  array.h  closure.cpp  closure.h  compile.cpp  compile.h  cuda.cpp  device.cpp  device.h  distributed.cpp  distributed.h  distributed_group.cpp  distributed_group.h  einsum.cpp  einsum.h  error.cpp  error.h  export.cpp  export.h  export_impl.cpp  export_impl.h  fast.cpp  fast.h  fast_try.cpp  fast_try.h  fft.cpp  fft.h  fft_try.cpp  fft_try.h  future.cpp  future.h  graph_utils.cpp  half.h  io.cpp  io.h  io_gguf.cpp  io_gguf.h  io_types.cpp  iotypes.cpp  iotypes.h  (+60 more)
mlx/c/private/: array.h  closure.h  device.h  distributed_group.h  enums.h  export.h  future.h  gguf.h  graph_utils.h  io.h  io_gguf.h  map.h  mlx.h  object.h  stream.h  string.h  tuple.h  utils.h  variant.h  vector.h
python/: c.py  closure_generator.py  generator.py  map_generator.py  mlxhooks.py  mlxtypes.py  mlxvariants.py  tuple_generator.py  type_private_generator.py  variant_generator.py  vector_generator.py
